--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -9,3 +9,5 @@ data:
   ENVIRONMENT: "${ENVIRONMENT}"
   OPENAI_API_KEY: "${OPENAI_API_KEY}"
   SECRET_KEY: "${SECRET_KEY}"
+  DJANGO_CONFIGURATION: "${DJANGO_CONFIGURATION}"
+  DJANGO_SETTINGS_MODULE: "${DJANGO_SETTINGS_MODULE}"
