--- a/k8s/prod/ingress.yaml
+++ b/k8s/prod/ingress.yaml
@@ -7,6 +7,8 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-body-size: 50m
     nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
+    cert-manager.io/cluster-issuer: "letsencrypt-production"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
 spec:
   ingressClassName: nginx
   rules:
@@ -20,3 +22,8 @@ spec:
                 name: sirius-main--web
                 port:
                   number: 80
+  tls:
+  - hosts:
+    - siriusapi.online
+    - hack.siriusapi.online
+    secretName: siriusapi-tls
