--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -11,3 +11,4 @@ data:
   SECRET_KEY: "${SECRET_KEY}"
   DJANGO_CONFIGURATION: "${DJANGO_CONFIGURATION}"
   DJANGO_SETTINGS_MODULE: "${DJANGO_SETTINGS_MODULE}"
+  SENTRY_DSN: "${SENTRY_DSN}"
